# python-code-quality

./: .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  STYLEGUIDE.md  names.csv  pyproject.toml  ruff.toml
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _test.yml  _test_future.yml
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.__main__.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  python_code_quality.html  search.html  searchindex.js
branch/main/_autosummary/: python_code_quality.api.MyPackageProcess.html  python_code_quality.api.html  python_code_quality.utils.html  python_code_quality.utils.logging.html
branch/main/_sources/: cli.__main__.rst.txt  index.rst.txt  python_code_quality.rst.txt
branch/main/_sources/_autosummary/: python_code_quality.api.MyPackageProcess.rst.txt  python_code_quality.api.rst.txt  python_code_quality.utils.logging.rst.txt  python_code_quality.utils.rst.txt
docs/source/: api.rst  cli.__main__.rst  conf.py  index.rst  mypackage.rst  python_code_quality.rst
src/mypackage/: __init__.py  api.py  demo_sourcery.py
src/mypackage/cli/: __main__.py
src/mypackage/utils/: __init__.py
src/python_code_quality/: __init__.py  api.py  demo_comments_and_docstrings_01.py  demo_comments_and_docstrings_02.py  demo_comments_and_docstrings_03.py  demo_comments_and_docstrings_04.py  demo_comments_and_docstrings_05.py  demo_comments_and_docstrings_06.py  demo_duck_typing_01.py  demo_duck_typing_02.py  demo_duck_typing_ipython_session.txt  demo_dynamic_typing.py  demo_sourcery_01.py  demo_sourcery_02.py  demo_type_hints_and_naming_01.py  demo_type_hints_and_naming_02.py  demo_type_hints_and_naming_03.py  somewhere_deep_in_an_external_package.py
src/python_code_quality/cli/: __main__.py
src/python_code_quality/utils/: __init__.py  logging.py
tests/: conftest.py  test_api.py
tests/cli/: test_mypackage_cli.py  test_python_code_quality_cli.py
tests/subpackage1/: test_module1.py
tests/subpackage2/: test_module2.py
