[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/python_code_quality",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "manage.py",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/python_code_quality",
]

[project]
name = "python-code-quality"
version = "0.2.0"
description = "demo code for the Code Quality in Python talk."
readme = "README.md"
requires-python = ">= 3.10, < 3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
maintainers = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
keywords = [
    "Python",
    "Code",
    "Quality",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dictIO>=0.4.2",
]

[project.urls]
Homepage = "https://github.com/ClaasRostock/python-code-quality"
Documentation = "https://ClaasRostock.github.io/python-code-quality/README.html"
Repository = "https://github.com/ClaasRostock/python-code-quality.git"
Issues = "https://github.com/ClaasRostock/python-code-quality/issues"
Changelog = "https://github.com/ClaasRostock/python-code-quality/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.14.3",
    "pyright>=1.1.407",
    "mypy>=1.18",
    "sourcery>=1.40",
    "pre-commit>=4.3",
    "Sphinx>=8.2",
    "sphinx-argparse-cli>=1.20",
    "sphinx-autodoc-typehints>=3.5",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2025.9",
    "jupyter>=1.1",
]

[tool.uv]
default-groups = [
    "dev",
]
find-links = [
    "https://download.pytorch.org/whl/torch",
]
native-tls = true


[project.scripts]
python-code-quality = "python_code_quality.cli.__main__:main"


[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
]
mypy_path = "stubs"
files = [
    "src",
    "tests",
]
exclude = [
    "^src/python_code_quality/somewhere_deep_in_an_external_package.py",
    "^src/python_code_quality/demo_type_hints_and_naming_01.py",
    "^src/python_code_quality/demo_type_hints_and_naming.py",
    "^src/python_code_quality/demo_duck_typing_01.py",
    "^src/python_code_quality/demo_duck_typing.py",
    "^src/python_code_quality/demo_comments_and_docstrings_01.py",
    "^src/python_code_quality/demo_comments_and_docstrings_02.py",
    "^src/python_code_quality/demo_comments_and_docstrings_03.py",
    "^src/python_code_quality/demo_comments_and_docstrings.py",
    "^src/python_code_quality/demo_dynamic_typing_01.py",
    "^src/python_code_quality/demo_dynamic_typing.py",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
]
exclude = [
    "src/python_code_quality/somewhere_deep_in_an_external_package.py",
    "src/python_code_quality/demo_type_hints_and_naming_01.py",
    "src/python_code_quality/demo_type_hints_and_naming.py",
    "src/python_code_quality/demo_duck_typing_01.py",
    "src/python_code_quality/demo_duck_typing.py",
    "src/python_code_quality/demo_comments_and_docstrings_01.py",
    "src/python_code_quality/demo_comments_and_docstrings_02.py",
    "src/python_code_quality/demo_comments_and_docstrings_03.py",
    "src/python_code_quality/demo_comments_and_docstrings.py",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportShadowedImports = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
